--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "@supabase/supabase-js": "^2.50.0",
+    "@types/jsdom": "^21.1.7",
+    "axios": "^1.10.0",
     "dotenv": "^16.5.0",
     "expo": "~53.0.10",
     "expo-blur": "~14.1.5",
@@ -33,6 +35,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.1.6",
+    "jsdom": "^26.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
