--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "expo-auth-session": "~6.2.1"
+    "expo-auth-session": "~6.2.1",
+    "expo-crypto": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
